--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -9,10 +9,10 @@ jobs:
       - name: Create generic version tag based on release tag
         run: |
           echo "tag_name=$(echo ${{ github.ref_name }} | sed -E 's/^(v[0-9]+)\.[0-9]+\.[0-9]+$/\1/'))" >> $GITHUB_ENV
-      - uses: actions/checkout@v3
       - name: Create generic tag
         uses: rickstaa/action-create-tag@v1
         with:
-          tag: "${{ env.tag_name }}"
-          commit_sha: "${{ github.sha }}"
+          tag: ${{ env.tag_name }}
+          commit_sha: ${{ github.sha }}
           force_push_tag: true
+          github_token: ${{ secrets.GITHUB_TOKEN }}
