--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -8,7 +8,7 @@ jobs:
     steps:
       - name: Create generic version tag based on release tag
         run: |
-          echo "tag_name=$(echo ${{ github.ref_name }} | sed -E 's/^(v[0-9]+)\.[0-9]+\.[0-9]+$/\1/'))" >> $GITHUB_ENV
+          echo "tag_name=$(echo ${{ github.ref_name }} | sed -E 's/^(v[0-9]+)\.[0-9]+\.[0-9]+$/\1/')" >> $GITHUB_ENV
       - uses: actions/checkout@v3
       - name: Create generic tag
         uses: rickstaa/action-create-tag@v1
