--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -11,9 +11,9 @@ jobs:
           echo "tag_name=$(echo ${{ github.ref_name }} | sed -E 's/^(v[0-9]+)\.[0-9]+\.[0-9]+$/\1/')" >> $GITHUB_ENV
       - uses: actions/checkout@v3
       - name: Create generic tag
-        uses: rickstaa/action-create-tag@v1
+        uses: pkgdeps/git-tag-action@v2
         with:
-          tag: ${{ env.tag_name }}
-          commit_sha: ${{ github.sha }}
-          force_push_tag: true
           github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_repo: ${{ github.repository }}
+          git_commit_sha: ${{ github.sha }}
+          version: ${{ env.tag_name }}
