--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -4,6 +4,7 @@ on:
 
 jobs:
   create-tag:
+    permissions: write-all
     runs-on: ubuntu-latest
     steps:
       - name: Create generic version tag based on release tag
