--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -12,9 +12,8 @@ jobs:
           echo "tag_name=$(echo ${{ github.ref_name }} | sed -E 's/^(v[0-9]+)\.[0-9]+\.[0-9]+$/\1/')" >> $GITHUB_ENV
       - uses: actions/checkout@v3
       - name: Create generic tag
-        uses: pkgdeps/git-tag-action@v2
+        uses: rickstaa/action-create-tag@v1
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          github_repo: ${{ github.repository }}
-          git_commit_sha: ${{ github.sha }}
-          version: ${{ env.tag_name }}
+          commit_sha: ${{ github.sha }}
+          tag: ${{ env.tag_name }}
+          force_push_tag: true
